--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -20,6 +20,7 @@ body {
   display: block;
   text-align: center;
   height: 80px;
+  transition: background .5s ease-out;
 }
 
 .naglowek ul li:hover {
@@ -88,11 +89,34 @@ body {
 .glowna {
   padding: 40px 10px;
 }
-
+/* INDEX.jsp */
 .glowna .zawartosc h2 {
   text-align: center;
 }
-
+/* ShowAllPlayers.jsp */
+.glowna .dodajKolejnego {
+ border: 3px solid #000;
+ transition: all .5s ease-out;
+}
+.glowna .dodajKolejnego a {
+  color: #000;
+  display:block;
+  padding: 10px 20px;
+  font-weight: 600;
+  transition: all .5s ease-out;
+}
+.glowna .dodajKolejnego a:hover {
+ color: #fff;
+	
+}
+.glowna .dodajKolejnego:hover {
+  background-color: #000;
+  color: #fff;
+}
+.glowna .listaWszystkich b {
+  padding-left: 25px;
+	
+}
 /* Tablety */
 @media only screen  and (max-width: 768px){ 
  
