--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -118,11 +118,25 @@ body {
   background-color: #000;
   color: #fff;
 }
+/*Addplayer.jsp*/
+.glowna table {
+  width: 100%;
+  border-spacing: 0;
+   border: 2px solid #000;
+}
+
+.glowna table td {
+  font-weight: 600;
+  border: 1px solid #000;
+}
+
+.glowna table tr:nth-child(even){
+  background-color: #a0a0a0;
+}
 
 /*Wyswietl wszystkich */
 .glowna .listaWszystkich b {
   padding-left: 25px;
-	
 }
 /* Tablety */
 @media only screen  and (max-width: 768px){ 
