--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -114,7 +114,7 @@ body {
  color: #fff;
 	
 }
-.glowna .przycisk:hover {
+.glowna .przycisk:hover a {
   background-color: #000;
   color: #fff;
 }
@@ -122,7 +122,7 @@ body {
 .glowna table {
   width: 100%;
   border-spacing: 0;
-   border: 2px solid #000;
+  border: 2px solid #000;
 }
 
 .glowna table td {
@@ -137,6 +137,19 @@ body {
 /*Wyswietl wszystkich */
 .glowna .listaWszystkich b {
   padding-left: 25px;
+}
+.glowna input[type="submit"] {
+    width: 200px;
+    height: 40px;
+    background-color: #fff;
+    border: 3px solid #000;
+    cursor: pointer;
+    font-weight: 700;
+}
+.glowna input[type="submit"]:hover {
+	color: #fff;
+	background-color: #000;
+	transition: all .5s ease-out;
 }
 /* Tablety */
 @media only screen  and (max-width: 768px){ 
