--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -34,7 +34,10 @@ body {
 .naglowek ul .logo {
   padding-top: 20px;
 }
-
+.naglowek ul .logo h3 {
+   font-size: 1.388rem;
+	
+}
 .naglowek ul .logo a {
   padding: 0;
 }
@@ -135,12 +138,10 @@ body {
 }
 
 /*Wyswietl wszystkich */
-.glowna .listaWszystkich b {
-  padding-left: 25px;
-}
+
 .glowna input[type="submit"] {
-    width: 200px;
-    height: 40px;
+ width: 100%;
+height: 50px;
     background-color: #fff;
     border: 3px solid #000;
     cursor: pointer;
@@ -178,7 +179,7 @@ body {
   .responsywneMenu .hamburger {
     position: absolute;
     display: block;
-    top: 15px;
+    top: 20px;
     right: 30px;
     font-size: 25px;
     cursor: pointer;
